# PD3

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  loc.sh
docs/: AE.md
exp/fig11/: README.md  gen_fig.py
exp/fig12/: README.md  gen_fig.py
exp/fig13/: README.md  gen_fig.py
exp/fig14/: README.md  gen_fig.py
exp/fig15/: README.md  gen_fig.py
exp/fig16/: README.md  gen_fig.py
exp/fig17/: README.md  gen_fig.py
exp/fig18/: README.md  gen_fig.py
exp/fig19/: README.md
exp/fig21/: README.md
exp/fig21b/: README.md
exp/fig21c/: README.md
exp/fig22/: README.md
exp/fig23/: README.md
exp/fig24/: README.md
exp/fig25/: README.md
src/: CMakeLists.txt
src/PD3/: CMakeLists.txt
src/PD3/buffer/: CMakeLists.txt  agent_buffer.cpp  agent_buffer.hpp  baselines.cpp  baselines.hpp  request_buffer.cpp  request_buffer.hpp  response_buffer.cpp  response_buffer.hpp  types.hpp
src/PD3/literals/: memory_literals.hpp
src/PD3/loading_zone/: CMakeLists.txt  agent.cpp  agent.hpp  agent_wrapper.cpp
src/PD3/network_engine/: CMakeLists.txt  client_types.hpp  garnet.cpp  garnet.hpp  hashmap.cpp  hashmap.hpp  network_engine.cpp  network_engine.hpp  network_engine_main.cpp  network_engine_main.hpp  prefetcher_interface.hpp
src/PD3/prefetcher/: CMakeLists.txt  hash.hpp  host_view.hpp  hugepage_allocator.hpp  message_queue.hpp  prefetcher.cpp  prefetcher.hpp  refresher.hpp  types.hpp  user_defined.hpp  user_defined_garnet.cpp  utils.hpp
src/PD3/rdma_backend/: CMakeLists.txt  lookup_table.hpp  pd3_server.cpp  pd3_server.hpp
src/PD3/system/: CMakeLists.txt  dma_buffer.hpp  latency_writer.hpp  logger.hpp  shm_allocator.cpp  shm_allocator.hpp  shm_attacher.cpp  shm_attacher.hpp  system_fwd.hpp  utils.hpp
src/PD3/transfer_engine/: CMakeLists.txt  transfer_client.cpp  transfer_client.hpp  transfer_engine.cpp  transfer_engine.hpp  transfer_engine_rdma.cpp  types.hpp  unified_buffer.hpp
src/apps/: CMakeLists.txt
src/apps/garnet/: garnet.patch
src/apps/hashmap/: CMakeLists.txt  client.cpp  latency_client.cpp  lru.hpp  net_hashmap.cpp  net_hashmap.hpp  req_gen.cpp  req_gen.hpp  server.cpp  types.hpp  zipf.cpp  zipf.hpp
src/apps/hello_world/: CMakeLists.txt
src/apps/memory_backend/: CMakeLists.txt  batched.cpp  main.cpp  pd3.cpp
src/apps/prefetcher_ne/: CMakeLists.txt  app_config.json  config.json  config_2.json  dpdk_utils.c  dpdk_utils_v15.c  main.cpp
src/config/: config.h  json.h
src/libs/: CMakeLists.txt
src/libs/FASTER/: CMakeLists.txt  lss_allocator.h  thread.h  thread_manual.cpp
src/libs/benchmarking/: CMakeLists.txt  leap.cpp  leap.cpp.bank  leap.hpp  lru.cpp  lru.hpp
src/libs/common/: CMakeLists.txt  app_utils.cpp  app_utils.h  doca_common.cpp  doca_common.hpp  types.hpp
src/libs/garnet_devices/: CMakeLists.txt
src/libs/garnet_devices/rdma_device/: CMakeLists.txt  device_wrapper.cpp  null_device.cpp  null_device.hpp  rdma_context.cpp  rdma_context.hpp  rdma_device.cpp  rdma_device.hpp
src/libs/garnet_devices/rdma_sync_device/: CMakeLists.txt  rdma_sync_device.cpp  rdma_sync_device.hpp  sync_client.cpp  sync_client.hpp  sync_device_wrapper.cpp
src/libs/garnet_devices/redy_device/: CMakeLists.txt  device_wrapper.cpp  device_wrapper_single.cpp  redy_device.cpp  redy_device.hpp  redy_device_single.cpp  redy_device_single.hpp  types.hpp
src/libs/rdma_backend/: CMakeLists.txt  batched_server.cpp  batched_server.hpp  mem_server.cpp  mem_server.hpp  remote_server.cpp  remote_server.hpp  types.hpp
src/libs/redy/: CMakeLists.txt  rdma_client.cpp  rdma_client.hpp
src/libs/types/: message_buffer.hpp  rdma_conn.hpp  rdma_protocol.hpp
src/libs/user_defined/: CMakeLists.txt  garnet.cpp  garnet.hpp
tests/: CMakeLists.txt  baseline_test.cpp  garnet_parsing_test.cpp  leap_test.cpp  lru_test.cpp  spmc_test.cpp  te_client_test.cpp  transfer_engine_test.cpp
